--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,11 +47,39 @@ services:
     networks:
       - klicker
 
-  sendria:
-    image: msztolcman/sendria:v2.2.2.0
+  # fake smtp server for catching email during development
+  mailhog:
+    image: docker.io/mailhog/mailhog:latest
     ports:
       - 1025:1025
-      - 1080:1080
+      - 8025:8025
+    networks:
+      - klicker
+
+  # service for transactional emails and newsletter campaigns
+  # uses mailhog to send transactional emails during development
+  listmonk:
+    image: docker.io/listmonk/listmonk:latest
+    ports:
+      - '9000:9000'
+    environment:
+      - TZ=Europe/Zurich
+    depends_on:
+      - listmonk_db
+      - mailhog
+    volumes:
+      - ./util/listmonk-config.toml:/listmonk/config.toml
+    networks:
+      - klicker
+
+  listmonk_db:
+    image: docker.io/library/postgres:13
+    environment:
+      - POSTGRES_PASSWORD=listmonk
+      - POSTGRES_USER=listmonk
+      - POSTGRES_DB=listmonk
+    volumes:
+      - /var/lib/postgresql/data
     networks:
       - klicker
 
@@ -67,78 +95,78 @@ services:
     volumes:
       - /data/db
 
-  frontend_pwa:
-    profiles:
-      - full
-    build:
-      context: .
-      dockerfile: apps/frontend-pwa/Dockerfile
-      args:
-        NODE_ENV: development
-        COOKIE_DOMAIN: 127.0.0.1
-        NEXT_PUBLIC_ADD_RESPONSE_URL: 'http://127.0.0.1:7072/api/AddResponse'
-        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
-        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
-    environment:
-      APP_SECRET: abcd
-    ports:
-      - 3001:3000
-    networks:
-      - klicker
+  # frontend_pwa:
+  #   profiles:
+  #     - full
+  #   build:
+  #     context: .
+  #     dockerfile: apps/frontend-pwa/Dockerfile
+  #     args:
+  #       NODE_ENV: development
+  #       COOKIE_DOMAIN: 127.0.0.1
+  #       NEXT_PUBLIC_ADD_RESPONSE_URL: 'http://127.0.0.1:7072/api/AddResponse'
+  #       NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
+  #       NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
+  #   environment:
+  #     APP_SECRET: abcd
+  #   ports:
+  #     - 3001:3000
+  #   networks:
+  #     - klicker
 
-  frontend_manage:
-    profiles:
-      - full
-    build:
-      context: .
-      dockerfile: apps/frontend-manage/Dockerfile
-      args:
-        NODE_ENV: development
-        COOKIE_DOMAIN: 127.0.0.1
-        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
-        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
-    ports:
-      - 3002:3000
-    networks:
-      - klicker
+  # frontend_manage:
+  #   profiles:
+  #     - full
+  #   build:
+  #     context: .
+  #     dockerfile: apps/frontend-manage/Dockerfile
+  #     args:
+  #       NODE_ENV: development
+  #       COOKIE_DOMAIN: 127.0.0.1
+  #       NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
+  #       NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
+  #   ports:
+  #     - 3002:3000
+  #   networks:
+  #     - klicker
 
-  frontend_control:
-    profiles:
-      - full
-    build:
-      context: .
-      dockerfile: apps/frontend-control/Dockerfile
-      args:
-        NODE_ENV: development
-        COOKIE_DOMAIN: 127.0.0.1
-        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
-        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
-    ports:
-      - 3003:3000
-    networks:
-      - klicker
+  # frontend_control:
+  #   profiles:
+  #     - full
+  #   build:
+  #     context: .
+  #     dockerfile: apps/frontend-control/Dockerfile
+  #     args:
+  #       NODE_ENV: development
+  #       COOKIE_DOMAIN: 127.0.0.1
+  #       NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
+  #       NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
+  #   ports:
+  #     - 3003:3000
+  #   networks:
+  #     - klicker
 
-  backend:
-    profiles:
-      - full
-    build:
-      context: .
-      dockerfile: apps/backend-docker/Dockerfile
-      args:
-        NODE_ENV: 'development'
-    environment:
-      DATABASE_URL: 'postgres://klicker:klicker@postgres:5432/main'
-      APP_SECRET: 'abcd'
-      REDIS_HOST: 'redis_exec'
-      REDIS_PORT: 6379
-      REDIS_CACHE_HOST: 'redis_cache'
-      REDIS_CACHE_PORT: 6379
-      API_DOMAIN: '127.0.0.1'
-      COOKIE_DOMAIN: '127.0.0.1'
-    ports:
-      - 3000:3000
-    networks:
-      - klicker
+  # backend:
+  #   profiles:
+  #     - full
+  #   build:
+  #     context: .
+  #     dockerfile: apps/backend-docker/Dockerfile
+  #     args:
+  #       NODE_ENV: 'development'
+  #   environment:
+  #     DATABASE_URL: 'postgres://klicker:klicker@postgres:5432/main'
+  #     APP_SECRET: 'abcd'
+  #     REDIS_HOST: 'redis_exec'
+  #     REDIS_PORT: 6379
+  #     REDIS_CACHE_HOST: 'redis_cache'
+  #     REDIS_CACHE_PORT: 6379
+  #     API_DOMAIN: '127.0.0.1'
+  #     COOKIE_DOMAIN: '127.0.0.1'
+  #   ports:
+  #     - 3000:3000
+  #   networks:
+  #     - klicker
 
 networks:
   klicker:
