--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klicker-uzh/backend-docker",
-  "version": "3.0.0-beta.4",
+  "version": "3.0.0-rc.0",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
