--- a/apps/frontend-manage/.env.production
+++ b/apps/frontend-manage/.env.production
@@ -10,7 +10,7 @@ NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3
 NEXT_PUBLIC_PWA_URL="https://pwa.klicker.uzh.ch"
 NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
 NEXT_PUBLIC_CONTROL_URL="https://control.klicker.uzh.ch"
-NEXT_PUBLIC_AUTH_URL="http://auth.klicker.uzh.ch"
+NEXT_PUBLIC_AUTH_URL="https://auth.klicker.uzh.ch"
 
 NEXT_PUBLIC_MATOMO_URL=https://webstats.uzh.ch/
 NEXT_PUBLIC_MATOMO_SITE_ID=470
