--- a/deploy/env-prod-v3/values.yaml
+++ b/deploy/env-prod-v3/values.yaml
@@ -27,8 +27,8 @@ auth:
           - auth.klicker-prod.bf-app.ch
 
   strategy:
-    # type: RollingUpdate
-    type: Recreate
+    type: RollingUpdate
+    # type: Recreate
 
   resources:
     requests:
@@ -61,8 +61,8 @@ frontendPWA:
           - pwa.klicker-prod.bf-app.ch
 
   strategy:
-    # type: RollingUpdate
-    type: Recreate
+    type: RollingUpdate
+    # type: Recreate
 
   resources:
     requests:
@@ -95,8 +95,8 @@ frontendManage:
           - manage.klicker-prod.bf-app.ch
 
   strategy:
-    # type: RollingUpdate
-    type: Recreate
+    type: RollingUpdate
+    # type: Recreate
 
   resources:
     requests:
@@ -129,8 +129,8 @@ frontendControl:
           - control.klicker-prod.bf-app.ch
 
   strategy:
-    # type: RollingUpdate
-    type: Recreate
+    type: RollingUpdate
+    # type: Recreate
 
   resources:
     requests:
@@ -163,8 +163,8 @@ backendGraphql:
           - backend-sls.klicker-prod.bf-app.ch
 
   strategy:
-    # type: RollingUpdate
-    type: Recreate
+    type: RollingUpdate
+    # type: Recreate
 
   resources:
     requests:
