--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -30,6 +30,7 @@
     "prettier-plugin-organize-imports": "3.2.3",
     "prettier-plugin-tailwindcss": "0.4.1",
     "react": "18.2.0",
+    "react-collapsed": "^4.0.4",
     "react-dom": "18.2.0",
     "react-medium-image-zoom": "4.4.3",
     "recharts": "2.7.2",
