--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,6 +11,8 @@
     "@docusaurus/preset-classic": "3.0.0-alpha.0",
     "@docusaurus/theme-common": "3.0.0-alpha.0",
     "@docusaurus/tsconfig": "*",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-regular-svg-icons": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
@@ -19,6 +21,8 @@
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.6",
     "@mdx-js/react": "2.3.0",
+    "@mui/lab": "5.0.0-alpha.141",
+    "@mui/material": "^5.14.6",
     "@tsconfig/docusaurus": "1.0.5",
     "@uzh-bf/design-system": "2.0.12",
     "autoprefixer": "10.4.14",
