--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -19,6 +19,7 @@
     "nookies": "2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "0.32.4",
     "tailwind-merge": "1.14.0"
   },
   "devDependencies": {
