--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -21,6 +21,7 @@
     "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
     "formik": "2.4.3",
+    "generate-password": "1.7.0",
     "graphql": "16.7.1",
     "graphql-ws": "5.13.1",
     "is-hotkey": "0.2.0",
