--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,6 +9,7 @@
     "@docusaurus/plugin-client-redirects": "3.0.0-alpha.0",
     "@docusaurus/plugin-ideal-image": "3.0.0-alpha.0",
     "@docusaurus/preset-classic": "3.0.0-alpha.0",
+    "@docusaurus/theme-classic": "3.0.0-alpha.0",
     "@docusaurus/theme-common": "3.0.0-alpha.0",
     "@docusaurus/tsconfig": "*",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
@@ -24,6 +25,7 @@
     "nodemon": "3.0.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.27",
+    "postcss-import": "15.1.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "prettier-plugin-tailwindcss": "0.4.1",
