--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -2,8 +2,9 @@
   "name": "@klicker-uzh/backend-docker",
   "version": "3.1.0-beta.2",
   "license": "AGPL-3.0",
-  "main": "dist/index.js",
+  "main": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -46,6 +47,7 @@
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
     "@types/ramda": "^0.29.3",
+    "@types/ws": "^8.5.8",
     "@uzh-bf/design-system": "2.1.13",
     "axios": "1.4.0",
     "cross-env": "7.0.3",
@@ -57,13 +59,14 @@
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
     "prisma": "5.5.2",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.2.0",
+    "typescript": "5.2.2"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
     "build:test": "pnpm run build",
     "check": "tsc --noEmit",
+    "//dev": "bun run --hot src/index.ts",
     "dev": "npm-run-all --parallel dev:build dev:run",
     "dev:build": "tsup --watch",
     "dev:offline": "pnpm run dev",
