--- a/cypress/package.json
+++ b/cypress/package.json
@@ -4,8 +4,11 @@
   "devDependencies": {
     "@cypress/code-coverage": "3.12.1",
     "@testing-library/cypress": "10.0.1",
+    "@types/jsonwebtoken": "^8.0.0",
     "@types/node": "^18.17.4",
+    "bun": "1.0.7",
     "cypress": "13.2.0",
+    "jsonwebtoken": "8.5.1",
     "typescript": "5.2.2"
   },
   "scripts": {
